feat: Adicionado a feature de votação
