# internal/models/rooms/rooms.go
@@ -2,6 +2,7 @@ package rooms
 
 import (
 	"errors"
+	"github.com/thiagopereiramartinez/scrumpoker-run.api/internal/models/players"
 	"strings"
 	"time"
 )
@@ -10,6 +11,7 @@ type Room struct {
 	Id        string    `json:"id"`
 	Name      string    `json:"name" firestore:"name"`
 	PinCode   string    `json:"pincode" firestore:"pincode"`
+	Topic     string    `json:"topic" firestore:"topic"`
 	CreatedAt time.Time `json:"created_at" firestore:"timestamp"`
 }
 
@@ -30,8 +32,14 @@ type RoomNewResponse struct {
 	PinCode string `json:"pincode"`
 }
 
+type RoomGetResponse struct {
+	Room
+	Players []players.Player `json:"players"`
+}
+
 type RoomJoinRequest struct {
 	PlayerName string `json:"player_name"`
+	PlayerHost *bool  `json:"host,omitempty"`
 }
 
 func (body *RoomJoinRequest) Validate() error {
@@ -46,4 +54,29 @@ type RoomJoinResponse struct {
 	Room       Room   `json:"room"`
 	PlayerId   string `json:"id"`
 	PlayerName string `json:"name"`
+	PlayerHost bool   `json:"host"`
+}
+
+type RoomTopicRequest struct {
+	TopicName string `json:"topic"`
+}
+
+func (body *RoomTopicRequest) Validate() error {
+	if len(strings.TrimSpace(body.TopicName)) == 0 {
+		return errors.New("the name of the player is required")
+	}
+
+	return nil
+}
+
+type RenameUserRequest struct {
+	PlayerName string `json:"player_name"`
+}
+
+func (body *RenameUserRequest) Validate() error {
+	if len(strings.TrimSpace(body.PlayerName)) == 0 {
+		return errors.New("the name of the player is required")
+	}
+
+	return nil
 }
